@@ -23,6 +23,7 @@ Bugs:
 * Comments were not correctly storing IP addresses.
 * Editing comments does not handle request_uri properly.
 * Profile page should no longer improperly autocomplete stylesheet and password fields.
+* Blogroll editing was not handling https:// links properly.
 
 Changes for Sandbox 2.3
 -----------------------
